--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,20 @@
 version: 2
 jobs:
  build:
-   machine: true
+   docker: 
+     - image: microsoft/dotnet:2.2-sdk
    steps:
      - checkout 
-
+     - run:
+          name: Restore
+          command: dotnet restore
+          #working_directory: MyProject.Api
+      - run:
+          name: Build
+          command: dotnet build -c Release
+          #working_directory: MyProject.Api
+      - setup_remote_docker:
+          docker_layer_caching: true
      # build image
      - run: |         
          docker info
