--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,10 @@ jobs:
  build:
    docker: 
      - image: microsoft/dotnet:2.2-sdk
-   steps:
-     - checkout 
-     - run:
+    steps:
+      - checkout
+      - run: find .
+      - run:
           name: Restore
           command: dotnet restore
           #working_directory: MyProject.Api
