--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2
 jobs:
- build:
-   docker: 
-     - image: microsoft/dotnet:2.2-sdk
+  build:
+    docker:
+      - image: jetcipher/circleci-dotnet-core:3.0
     steps:
       - checkout
       - run: find .
