--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
           command: dotnet build -c Release
           #working_directory: MyProject.Api
       - setup_remote_docker:
+          version: 18.06.0-ce
           docker_layer_caching: true
      # build image
      #- run: |         
