--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
           name: Build
           command: dotnet build -c Release
           #working_directory: MyProject.Api
+      - run:
+          name: Publish
+          command: dotnet -c Release -o output    
       - setup_remote_docker:
           version: 18.06.0-ce
           docker_layer_caching: true
