--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           #working_directory: MyProject.Api
       - run:
           name: Publish
-          command: dotnet -c Release -o output    
+          command: dotnet publish -c Release -o output    
       - setup_remote_docker:
           version: 18.06.0-ce
           docker_layer_caching: true
